instalação do pacote twig/twig e do symfony/twig-bundle, pois o twig/extensions foi depreciado. desenvolvimento das funções do controller

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
     "autoload": {
         "psr-4": {
-            "app\\":"app",
+            "app\\": "app",
             "core\\": "core"
         }
+    },
+    "require": {
+        "twig/twig": "^3.16",
+        "symfony/twig-bundle": "^7.2"
     }
 }
